--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -74,13 +75,6 @@
                 android:layout_height="100dp"
                 android:layout_marginRight="32dp"
                 android:text="Button" />
-
-            <Button
-                android:id="@+id/button2"
-                android:layout_width="400dp"
-                android:layout_height="100dp"
-                android:text="Button"
-                android:visibility="invisible" />
 
         </LinearLayout>
     </LinearLayout>
