--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,8 @@
         android:id="@+id/img_avatar"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginStart="32dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginStart="50dp"
         android:layout_marginTop="32dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -24,7 +24,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="42dp"
-        android:text="TextView"
+        android:text="@string/user_name"
         app:layout_constraintStart_toEndOf="@+id/img_avatar"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -51,13 +51,13 @@
                 android:layout_width="400dp"
                 android:layout_height="100dp"
                 android:layout_marginRight="32dp"
-                android:text="Button" />
+                android:text="@string/lancer_une_session" />
 
             <Button
                 android:id="@+id/btn_multi_session"
                 android:layout_width="400dp"
                 android:layout_height="100dp"
-                android:text="Button" />
+                android:text="@string/lancer_une_session_collaborative" />
 
         </LinearLayout>
 
@@ -74,7 +74,7 @@
                 android:layout_width="400dp"
                 android:layout_height="100dp"
                 android:layout_marginRight="32dp"
-                android:text="Button" />
+                android:text="@string/mes_vid_os" />
 
         </LinearLayout>
     </LinearLayout>
