--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,13 +51,13 @@
                 android:layout_width="400dp"
                 android:layout_height="100dp"
                 android:layout_marginRight="32dp"
-                android:text="@string/lancer_une_session" />
+                android:text="@string/start_session" />
 
             <Button
                 android:id="@+id/btn_multi_session"
                 android:layout_width="400dp"
                 android:layout_height="100dp"
-                android:text="@string/lancer_une_session_collaborative" />
+                android:text="@string/start_multi_session" />
 
         </LinearLayout>
 
@@ -74,7 +74,7 @@
                 android:layout_width="400dp"
                 android:layout_height="100dp"
                 android:layout_marginRight="32dp"
-                android:text="@string/mes_vid_os" />
+                android:text="@string/my_videos" />
 
         </LinearLayout>
     </LinearLayout>
