--- a/app/src/main/res/layout/activity_my_video.xml
+++ b/app/src/main/res/layout/activity_my_video.xml
@@ -13,7 +13,7 @@
         app:defaultQueryHint="@string/search"/>
 
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="32dp"
@@ -24,7 +24,7 @@
         app:layout_constraintTop_toBottomOf="@+id/search_video">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/logo_category"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_weight="1"
@@ -33,7 +33,7 @@
             app:srcCompat="@android:color/darker_gray" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/name_category"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -55,6 +55,6 @@
         android:numColumns="auto_fit"
         android:stretchMode="columnWidth"
         android:verticalSpacing="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/category" />
 
 </android.support.constraint.ConstraintLayout>
