correction fichier string

--- a/app/src/main/res/layout/activity_selected_video.xml
+++ b/app/src/main/res/layout/activity_selected_video.xml
@@ -25,14 +25,14 @@
             android:id="@+id/tv_tittle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/titre_de_la_video"
+            android:text="@string/video_tittle"
             android:textSize="18sp" />
 
         <TextView
             android:id="@+id/tv_folder"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/dossier" />
+            android:text="@string/folder" />
 
         <TextView
             android:id="@+id/tv_description"
@@ -55,7 +55,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_weight="0.33"
-                android:text="@string/visionner" />
+                android:text="@string/play_video" />
 
             <Button
                 android:id="@+id/bt_edit"
@@ -64,7 +64,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_weight="0.33"
-                android:text="@string/modifier" />
+                android:text="@string/edit" />
 
             <Button
                 android:id="@+id/bt_upload"
@@ -73,7 +73,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_weight="0.33"
-                android:text="@string/uploader" />
+                android:text="@string/upload" />
         </LinearLayout>
     </LinearLayout>
 
