--- a/app/src/main/res/layout/activity_info_video.xml
+++ b/app/src/main/res/layout/activity_info_video.xml
@@ -13,7 +13,7 @@
         android:layout_marginLeft="60dp"
         android:layout_marginStart="60dp"
         android:layout_marginTop="31dp"
-        android:text="@string/informations_sur_la_vid_o"
+        android:text="@string/video_info"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -26,7 +26,7 @@
         android:layout_marginStart="60dp"
         android:layout_marginTop="25dp"
         android:ems="10"
-        android:hint="@string/titre_de_la_vid_o"
+        android:hint="@string/video_tittle"
         android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_tittle" />
@@ -39,7 +39,7 @@
         android:layout_marginStart="60dp"
         android:layout_marginTop="25dp"
         android:ems="10"
-        android:hint="@string/description_de_la_vid_o"
+        android:hint="@string/description"
         android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_video_tittle" />
@@ -52,7 +52,7 @@
         android:layout_marginLeft="60dp"
         android:layout_marginStart="60dp"
         android:layout_marginTop="25dp"
-        android:entries="@string/video_description"
+        android:entries="@string/select_folder"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_description" />
@@ -64,7 +64,7 @@
         android:layout_marginEnd="60dp"
         android:layout_marginRight="60dp"
         android:layout_marginTop="29dp"
-        android:text="@string/modifier"
+        android:text="@string/edit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -76,7 +76,7 @@
         android:layout_marginEnd="60dp"
         android:layout_marginRight="60dp"
         android:layout_marginTop="20dp"
-        android:text="@string/supprimer"
+        android:text="@string/delete_video"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bt_edit" />
