--- a/app/src/main/res/layout/item_observation.xml
+++ b/app/src/main/res/layout/item_observation.xml
@@ -25,7 +25,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="Nom observation"
+        android:text="@string/nom_observation"
         android:textColor="@android:color/black"
         app:layout_constraintStart_toEndOf="@+id/iv_color"
         app:layout_constraintTop_toTopOf="parent" />
