--- a/app/src/main/res/layout/activity_selected_video.xml
+++ b/app/src/main/res/layout/activity_selected_video.xml
@@ -22,7 +22,7 @@
             android:layout_height="217dp" />
 
         <TextView
-            android:id="@+id/tv_tittle"
+            android:id="@+id/tv_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/video_tittle"
