--- a/app/src/main/res/layout/activity_info_video.xml
+++ b/app/src/main/res/layout/activity_info_video.xml
@@ -52,7 +52,7 @@
         android:layout_marginLeft="60dp"
         android:layout_marginStart="60dp"
         android:layout_marginTop="25dp"
-        android:entries="@string/select_folder"
+        android:entries="@array/select_folder"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_description" />
