--- a/app/src/main/res/layout/item_observation.xml
+++ b/app/src/main/res/layout/item_observation.xml
@@ -19,7 +19,7 @@
         app:srcCompat="@android:color/holo_blue_light" />
 
     <TextView
-        android:id="@+id/tv_observation"
+        android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
@@ -43,6 +43,6 @@
         android:background="@android:drawable/ic_delete"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tv_observation"
+        app:layout_constraintStart_toEndOf="@+id/tv_name"
         app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
