--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,18 +46,19 @@
             app:layout_constraintStart_toStartOf="parent"
             tools:layout_editor_absoluteY="104dp">
 
-            <Button
+            <include
                 android:id="@+id/btn_start_session"
+                layout="@layout/item_btn_main"
                 android:layout_width="400dp"
                 android:layout_height="100dp"
-                android:layout_marginRight="32dp"
-                android:text="@string/start_session" />
+                android:layout_margin="5dp"/>
 
-            <Button
+            <include
                 android:id="@+id/btn_multi_session"
+                layout="@layout/item_btn_main"
                 android:layout_width="400dp"
                 android:layout_height="100dp"
-                android:text="@string/start_multi_session" />
+                android:layout_margin="5dp"/>
 
         </LinearLayout>
 
@@ -69,12 +70,12 @@
             app:layout_constraintStart_toStartOf="parent"
             tools:layout_editor_absoluteY="236dp">
 
-            <Button
+            <include
                 android:id="@+id/btn_videos"
+                layout="@layout/item_btn_main"
                 android:layout_width="400dp"
                 android:layout_height="100dp"
-                android:layout_marginRight="32dp"
-                android:text="@string/my_videos" />
+                android:layout_margin="5dp"/>
 
         </LinearLayout>
     </LinearLayout>
