--- a/app/src/main/res/layout/item_btn_main.xml
+++ b/app/src/main/res/layout/item_btn_main.xml
@@ -3,13 +3,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:background="@color/colorAccent">
 
     <ImageView
         android:id="@+id/logo_btn"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/settings"/>
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:src="@drawable/settings"
+        android:layout_gravity="center_vertical"
+        android:paddingLeft="15dp"/>
 
     <TextView
         android:id="@+id/name_btn"
