--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -18,12 +18,24 @@
             android:layout_weight="0.5">
 
             <TextView
-                android:id="@+id/tv_information"
+                android:id="@+id/tv_my_analyse"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="32dp"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="8dp"
+                android:text="@string/my_analyse"
+                android:textColor="@android:color/black"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/et_video_title" />
+
+            <TextView
+                android:id="@+id/tv_information"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="32dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="32dp"
                 android:text="@string/infor_session"
                 android:textColor="@android:color/black"
                 app:layout_constraintStart_toStartOf="parent"
@@ -42,18 +54,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_information" />
 
-            <TextView
-                android:id="@+id/tv_my_analyse"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="32dp"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="8dp"
-                android:text="@string/my_analyse"
-                android:textColor="@android:color/black"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/et_video_title" />
-
             <Spinner
                 android:id="@+id/spinner_session_infos"
                 android:layout_width="256dp"
@@ -64,17 +64,13 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_my_analyse" />
 
-            <TextView
-                android:id="@+id/tv_new_analyse"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="32dp"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="8dp"
-                android:text="Nouvelle grille d'analyse"
-                android:textColor="@android:color/black"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/spinner_session_infos" />
+        </android.support.constraint.ConstraintLayout>
+
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/linear_layout_right"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="0.5">
 
             <EditText
                 android:id="@+id/et_grid_title"
@@ -87,37 +83,42 @@
                 android:hint="@string/title_grille"
                 android:inputType="textPersonName"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_new_analyse" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_analyse" />
 
             <TextView
-                android:id="@+id/tv_evenement"
+                android:id="@+id/tv_analyse"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
-                android:layout_marginLeft="32dp"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="8dp"
-                android:text="Mes événements"
+                android:layout_marginTop="32dp"
+                android:text="Nouvelle grille d'analyse"
                 android:textColor="@android:color/black"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/et_grid_title" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:layout_editor_absoluteX="43dp" />
 
-            <android.support.v7.widget.RecyclerView
+
+            <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
 
                 android:id="@+id/list_items"
                 android:layout_width="213dp"
-                android:layout_height="103dp"
+                android:layout_height="169dp"
+                android:layout_marginLeft="32dp"
+                android:layout_marginStart="32dp"
                 android:layout_marginTop="8dp"
                 android:scrollbars="vertical"
-                app:layout_constraintTop_toBottomOf="@+id/tv_evenement"
-                tools:layout_editor_absoluteX="32dp" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/et_grid_title" />
 
-        </android.support.constraint.ConstraintLayout>
-
-        <android.support.constraint.ConstraintLayout
-            android:id="@+id/linear_layout_right"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="0.5">
+            <TextView
+                android:id="@+id/tv_add_moment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:text="@string/add_moment"
+                android:textColor="@android:color/black"
+                app:layout_constraintStart_toEndOf="@+id/fab_add_moment"
+                app:layout_constraintTop_toBottomOf="@+id/list_items" />
 
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/fab_add_moment"
@@ -125,29 +126,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="32dp"
                 android:layout_marginStart="32dp"
+                android:layout_marginTop="8dp"
                 android:clickable="true"
                 android:src="@android:drawable/ic_menu_add"
                 app:layout_constraintStart_toStartOf="parent"
-                tools:layout_editor_absoluteY="334dp" />
-
-            <Spinner
-                android:id="@+id/spinner_new_grid"
-                android:layout_width="213dp"
-                android:layout_height="20dp"
-                android:layout_marginLeft="32dp"
-                android:layout_marginStart="32dp"
-                app:layout_constraintStart_toStartOf="parent"
-                tools:layout_editor_absoluteY="51dp" />
-
-
-            <TextView
-                android:id="@+id/tv_add_moment"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/add_evenement"
-                android:textColor="@android:color/black"
-                tools:layout_editor_absoluteX="80dp"
-                tools:layout_editor_absoluteY="340dp" />
+                app:layout_constraintTop_toBottomOf="@+id/list_items" />
 
             <Button
                 android:id="@+id/button_go"
