--- a/app/src/main/res/layout/activity_my_video.xml
+++ b/app/src/main/res/layout/activity_my_video.xml
@@ -6,11 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".MyVideoActivity">
 
+    <include
+        layout="@layout/toolbar"
+        android:id="@+id/appBar"/>
+
     <android.support.v7.widget.SearchView
         android:id="@+id/search_video"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:defaultQueryHint="@string/search"/>
+        android:layout_marginTop="65dp"
+        app:defaultQueryHint="@string/search"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/category"
