--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -6,6 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".ProfilActivity">
 
+    <include
+        layout="@layout/toolbar"
+        android:id="@+id/appBar"/>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
