--- a/app/src/main/res/layout-land/activity_selected_video.xml
+++ b/app/src/main/res/layout-land/activity_selected_video.xml
@@ -89,7 +89,7 @@
 
         <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/lv_tags"
+            android:id="@+id/re_tags"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="0.7"
