--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -7,7 +7,8 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="?attr/actionBarSize"
-        android:background="@color/colorPrimary"/>
+        android:alpha="0.7"
+        android:background="#2E2E2E"
+        android:minHeight="?attr/actionBarSize" />
 
 </android.support.constraint.ConstraintLayout>
