--- a/app/src/main/res/layout-land/activity_connexion.xml
+++ b/app/src/main/res/layout-land/activity_connexion.xml
@@ -4,12 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg"
     tools:context=".ConnexionActivity">
 
     <ImageView
         android:id="@+id/iv_logo"
-        android:layout_width="187dp"
-        android:layout_height="wrap_content"
+        android:layout_width="202dp"
+        android:layout_height="85dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
@@ -18,7 +19,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/ic_launcher" />
+        app:srcCompat="@drawable/vyfe_blanc" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -39,60 +40,73 @@
             android:layout_width="wrap_content"
             android:layout_height="26dp"
             android:text="@string/connected"
-            android:textColor="@android:color/black"
+            android:textColor="@color/white"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/iv_logo" />
 
         <EditText
             android:id="@+id/et_mail"
             android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/style_input"
             android:ems="10"
             android:hint="@string/email"
             android:inputType="textPersonName"
-            android:textColor="@android:color/black"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_connected" />
 
         <EditText
             android:id="@+id/et_password"
             android:layout_width="300dp"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_marginTop="12dp"
+            android:background="@drawable/style_input"
             android:ems="10"
             android:hint="@string/password"
             android:inputType="textPassword"
-            android:textColor="@android:color/black"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/et_mail" />
 
-        <Button
-            android:id="@+id/tv_lost_password"
-            android:layout_width="wrap_content"
-            android:layout_height="27dp"
-            android:background="@null"
-            android:textAllCaps="false"
-            android:layout_gravity="right"
-            android:text="@string/lost_password"
-            android:textColor="@android:color/black"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/et_password" />
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="16dp">
+
+            <Button
+                android:id="@+id/tv_lost_password"
+                android:layout_width="wrap_content"
+                android:layout_height="27dp"
+                android:layout_gravity="right"
+                android:background="@null"
+                android:text="@string/lost_password"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/btn_connected"
+                style="@style/Widget.AppCompat.Button.Small"
+                android:layout_width="134dp"
+                android:layout_height="29dp"
+                android:background="@drawable/style_button"
+                android:text="@string/connected_maj"
+                android:textColor="@color/white"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+        </android.support.constraint.ConstraintLayout>
+
 
     </LinearLayout>
 
 
-    <Button
-        android:id="@+id/btn_connected"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:text="@string/connected_maj"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
 </android.support.constraint.ConstraintLayout>
